New changes here

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="logo">SEO PRO</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li class="dropdown">
                     <a href="#services" class="dropdown-toggle">Services <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
@@ -27,10 +27,9 @@
                         <li><a href="seo-optimization.html">SEO Optimization</a></li>
                      </ul>
                 </li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#Product">Product</a></li>
+                <li><a href="#contact">Contact Us</a></li>
                 <li><a href="#Blog">Blog</a></li>
-                <li><a href="#Partnership">Partnership</a></li>
+                <li><a href="#Partnership" style="border: solid 1px rgb(60, 187, 219); padding: 10px; border-radius: 20px; background: linear-gradient(135deg, var(--sec-azure), var(--primary-azure)  , rgb(238, 173, 193) ) ; color: rgb(253, 250, 250); animation: gradientShift 8s ease infinite;">Meet Our Team</a></li>
 
 
 
@@ -94,32 +93,7 @@
         </div>
     </section>
 
-    <!-- Mission Section -->
-    <section class="mission-section">
-        <div class="mission-container">
-            <div class="mission-content">
-                <h2 class="mission-title">Our Mission</h2>
-                <p class="mission-text">
-                    Our mission is simple: to turn your website into a <span class="mission-highlight">powerful growth engine</span>. We combine data-driven strategies, creativity, and technical expertise to deliver results that matter—higher rankings, more traffic, and real conversions.
-                </p>
-                <p class="mission-text">
-                    We're not just another SEO agency. We're your strategic partners in digital growth, committed to understanding your business goals and delivering measurable results that drive real business value.
-                </p>
-            </div>
-            <div class="mission-visual">
-                <div class="mission-card">
-                    <div class="mission-card-content">
-                        <div class="mission-icon">
-                            <i class="fas fa-rocket"></i>
-                        </div>
-                        <h3 class="mission-card-title">Growth Engine</h3>
-                        <p class="mission-card-text">Transforming websites into powerful growth engines through strategic SEO and data-driven optimization.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+   
     <!-- Services Section part2 -->
     <section class="services" id="services">
         <div class="services-container">
@@ -131,6 +105,8 @@
                     </div>
                     <h3>Link Building</h3>
                     <p>Strategic backlink acquisition to boost your domain authority and improve search rankings with high-quality, relevant links.</p>
+                    <button class="service-btn"> <a href=""> LEARN MORE</a></button>
+
                 </div>
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
@@ -138,6 +114,9 @@
                     </div>
                     <h3>SEO Optimization</h3>
                     <p>Comprehensive on-page and technical SEO to optimize your website for search engines and improve organic visibility.</p>
+                    <button class="service-btn"> <a href=""> LEARN MORE</a></button>
+
+
                 </div>
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
@@ -145,6 +124,8 @@
                     </div>
                     <h3>Analytics & Reporting</h3>
                     <p>Detailed performance tracking and reporting to measure success and identify opportunities for growth.</p>
+                    <button class="service-btn"> <a href=""> LEARN MORE</a></button>
+
                 </div>
             </div>
         </div>
@@ -171,6 +152,33 @@
             </div>
         </div>
     </section>
+
+     <!-- Mission Section -->
+     <section class="mission-section">
+        <div class="mission-container">
+            <div class="mission-content">
+                <h2 class="mission-title">Our Mission</h2>
+                <p class="mission-text">
+                    Our mission is simple: to turn your website into a <span class="mission-highlight">powerful growth engine</span>. We combine data-driven strategies, creativity, and technical expertise to deliver results that matter—higher rankings, more traffic, and real conversions.
+                </p>
+                <p class="mission-text">
+                    We're not just another SEO agency. We're your strategic partners in digital growth, committed to understanding your business goals and delivering measurable results that drive real business value.
+                </p>
+            </div>
+            <div class="mission-visual">
+                <div class="mission-card">
+                    <div class="mission-card-content">
+                        <div class="mission-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3 class="mission-card-title">Growth Engine</h3>
+                        <p class="mission-card-text">Transforming websites into powerful growth engines through strategic SEO and data-driven optimization.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="footer">
