New changes here

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
         </div>
         
         <div class="hero">
-            <h1>Boost Your Rankings</h1>
+            <h1>Premium Guest Posting Services</h1>
+            <h3>Get Backlinks From High-Quality Websites</h3>
             <p>Expert SEO and Link Building Services to Dominate Search Results</p>
+          <h3>From Only <span class="heighlights"> $4.99</span> </h3>
             <div class="cta-buttons">
                 <a href="#services" class="btn btn-primary">
                     <i class="fas fa-rocket"></i>
