--- a/index.html
+++ b/index.html
@@ -19,21 +19,37 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li class="dropdown">
-                    <a href="#services" class="dropdown-toggle">Services <i class="fas fa-chevron-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="link-building.html" >Link Building</a>
-                          </li>
-                        <li><a href="seo-optimization.html">SEO Optimization</a></li>
-                     </ul>
-                </li>
+                    <!-- Services Dropdown -->
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Services <i class="fas fa-chevron-down"></i></a>
+        <ul class="dropdown-menu">
+
+          <!-- Link Building Submenu -->
+          <li class="dropdown-submenu">
+            <a href="link-building.html">Link Building ▸</a>
+            <ul class="dropdown-submenu-list">
+              <li><a href="guest-post.html">Guest Post</a></li>
+              <li><a href="saas-link-building.html">SAAS Link Building</a></li>
+              <li><a href="link-insertion.html">Link Insertion</a></li>
+            </ul>
+          </li>
+          
+          <!-- SEO Optimization Submenu -->
+          <li class="dropdown-submenu">
+            <a href="seo-optimization.html">SEO Optimization ▸</a>
+            <ul class="dropdown-submenu-list">
+              <li><a href="keyword-research.html">Keyword Research</a></li>
+              <li><a href="on-page-seo.html">On-page SEO</a></li>
+              <li><a href="technical-seo.html">Technical SEO</a></li>
+              <li><a href="seo-audit.html">SEO Audit</a></li>
+            </ul>
+          </li>
+          </ul>
+        </li>
                 <li><a href="#contact">Contact Us</a></li>
                 <li><a href="#Blog">Blog</a></li>
-                <li><a href="#Partnership" style="border: solid 1px rgb(29, 17, 189); padding: 10px; background: white; color: rgb(25, 12, 148); animation: gradientShift 8s ease infinite; ">Meet Our Team</a></li>
-
-
-
-            </ul>
+               <li><a href="">MEET OUR TEAM</a></li> 
+     
         </div>
     </nav>
 
